# code-tree

./: README.md  overview.md  pyproject.toml  report.md  report_llm.md  report_test.md  report_v2.md  testresult.md
codetree/: __init__.py  __main__.py  cli.py  frameworks.py  languages.py  llm_client.py  prioritization.py  reporter.py  scanner.py  skeleton.py
codetree.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
tests/: test_codetree.py  test_skeleton_js.py
