[build-system]
requires = ["setuptools>=61.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "codetree"
version = "0.1.0"
description = "A smart tree CLI tool that provides structural code understanding and analysis."
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = []

[project.scripts]
codetree = "codetree.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["codetree*"]
